--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,24 @@
+autopep8==1.3.4
 certifi==2018.1.18
 chardet==3.0.4
+cycler==0.10.0
 decorator==4.2.1
 idna==2.6
 ipython-genutils==0.2.0
 jsonschema==2.6.0
 jupyter-core==4.4.0
+matplotlib==2.1.2
 nbformat==4.4.0
 numpy==1.14.1
 pandas==0.22.0
 plotly==2.4.1
+pycodestyle==2.3.1
+pyparsing==2.2.0
 python-dateutil==2.6.1
 pytz==2018.3
 requests==2.18.4
+scipy==1.0.0
+seaborn==0.8.1
 six==1.11.0
 traitlets==4.3.2
 urllib3==1.22
