--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ cycler==0.10.0
 decorator==4.2.1
 idna==2.6
 ipython-genutils==0.2.0
+iso8601==0.1.12
 jsonschema==2.6.0
 jupyter-core==4.4.0
 matplotlib==2.1.2
